--- a/instagram/templates/registration/base.html
+++ b/instagram/templates/registration/base.html
@@ -1,4 +1,4 @@
- {% load bootstrap3 %}{% load staticfiles %}
+{% load bootstrap3 %}{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    {% include "navbar.html" %} {% block content %} {% endblock %} {% block scripts %} {% bootstrap_javascript %}
+    {% include "navbar.html" %} {% block content %} {% endblock %} {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> {% endblock %}
+    {% bootstrap_javascript %} {% endblock %}
 
   </body>
 
